[tool.poetry]
name = "analisis-de-datos"
version = "0.1.0"
description = "Data Analysis Project"
authors = ["F Martinez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"
scikit-learn = ">=1.0.0"
imbalanced-learn = ">=0.10.1"
missingno = ">=0.5.2"
statsmodels = ">=0.14.0"
pyampute = ">=0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
